--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/large_margin"
+        android:layout_marginBottom="@dimen/large_margin"
         app:cardCornerRadius="8dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="false">
@@ -21,73 +22,98 @@
             android:id="@+id/iv_cover"
             android:layout_width="172dp"
             android:layout_height="172dp"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:contentDescription="@string/cover"
+            app:srcCompat="@drawable/cover_default" />
     </androidx.cardview.widget.CardView>
 
     <EditText
         android:id="@+id/editJudulLagu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin"
         android:ems="10"
+        android:hint="@string/judul_lagu"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:autofillHints="@string/judul_lagu" />
 
     <EditText
         android:id="@+id/editAlbumLagu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin"
         android:ems="10"
+        android:hint="@string/album_lagu"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:autofillHints="@string/album_lagu" />
 
     <EditText
         android:id="@+id/editArtis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin"
         android:ems="10"
+        android:hint="@string/artis"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:autofillHints="@string/artis"/>
 
     <EditText
         android:id="@+id/editTahun"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin"
         android:ems="10"
-        android:inputType="number" />
+        android:hint="@string/tahun"
+        android:inputType="number"
+        android:autofillHints="@string/tahun"/>
 
     <EditText
         android:id="@+id/editNegara"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin"
         android:ems="10"
+        android:hint="@string/negara"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:autofillHints="@string/negara"/>
 
     <EditText
         android:id="@+id/editPublisher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/medium_margin"
         android:ems="10"
+        android:hint="@string/publisher"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:autofillHints="@string/publisher"/>
 
-    <EditText
-        android:id="@+id/editGenre"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:layout_margin="@dimen/medium_margin"
+        android:orientation="horizontal">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_weight="0"
+            android:text="@string/genre"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/spGenre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Simpan Data" />
+        android:layout_marginTop="@dimen/large_margin"
+        android:text="@string/btn_simpan" />
 
 </LinearLayout>
