--- a/app/src/main/res/layout/list_lagu.xml
+++ b/app/src/main/res/layout/list_lagu.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp">
+    android:layout_margin="@dimen/small_margin"
+    app:cardBackgroundColor="#FAFAFA"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="2dp"
+    app:cardUseCompatPadding="false">
 
     <LinearLayout
         android:layout_width="match_parent"
