--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,112 +8,120 @@
     android:orientation="vertical"
     tools:context=".InputActivity">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/large_margin"
-        android:layout_marginBottom="@dimen/large_margin"
-        app:cardCornerRadius="8dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="false">
-
-        <ImageView
-            android:id="@+id/iv_cover"
-            android:layout_width="172dp"
-            android:layout_height="172dp"
-            android:contentDescription="@string/cover"
-            app:srcCompat="@drawable/cover_default" />
-    </androidx.cardview.widget.CardView>
-
-    <EditText
-        android:id="@+id/editJudulLagu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:ems="10"
-        android:hint="@string/judul_lagu"
-        android:inputType="textPersonName"
-        android:autofillHints="@string/judul_lagu" />
-
-    <EditText
-        android:id="@+id/editAlbumLagu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:ems="10"
-        android:hint="@string/album_lagu"
-        android:inputType="textPersonName"
-        android:autofillHints="@string/album_lagu" />
-
-    <EditText
-        android:id="@+id/editArtis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:ems="10"
-        android:hint="@string/artis"
-        android:inputType="textPersonName"
-        android:autofillHints="@string/artis"/>
-
-    <EditText
-        android:id="@+id/editTahun"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:ems="10"
-        android:hint="@string/tahun"
-        android:inputType="number"
-        android:autofillHints="@string/tahun"/>
-
-    <EditText
-        android:id="@+id/editNegara"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:ems="10"
-        android:hint="@string/negara"
-        android:inputType="textPersonName"
-        android:autofillHints="@string/negara"/>
-
-    <EditText
-        android:id="@+id/editPublisher"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:ems="10"
-        android:hint="@string/publisher"
-        android:inputType="textPersonName"
-        android:autofillHints="@string/publisher"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_margin"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_weight="0"
-            android:text="@string/genre"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/large_margin"
+            android:layout_marginBottom="@dimen/large_margin"
+            app:cardCornerRadius="8dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="false">
 
-        <Spinner
-            android:id="@+id/spGenre"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/iv_cover"
+                android:layout_width="172dp"
+                android:layout_height="172dp"
+                android:contentDescription="@string/cover"
+                app:srcCompat="@drawable/cover_default" />
+        </androidx.cardview.widget.CardView>
+
+        <EditText
+            android:id="@+id/editJudulLagu"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0" />
+            android:layout_margin="@dimen/medium_margin"
+            android:ems="10"
+            android:hint="@string/judul_lagu"
+            android:inputType="textPersonName"
+            android:autofillHints="@string/judul_lagu" />
+
+        <EditText
+            android:id="@+id/editAlbumLagu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_margin"
+            android:ems="10"
+            android:hint="@string/album_lagu"
+            android:inputType="textPersonName"
+            android:autofillHints="@string/album_lagu" />
+
+        <EditText
+            android:id="@+id/editArtis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_margin"
+            android:ems="10"
+            android:hint="@string/artis"
+            android:inputType="textPersonName"
+            android:autofillHints="@string/artis"/>
+
+        <EditText
+            android:id="@+id/editTahun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_margin"
+            android:ems="10"
+            android:hint="@string/tahun"
+            android:inputType="number"
+            android:autofillHints="@string/tahun"/>
+
+        <EditText
+            android:id="@+id/editNegara"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_margin"
+            android:ems="10"
+            android:hint="@string/negara"
+            android:inputType="textPersonName"
+            android:autofillHints="@string/negara"/>
+
+        <EditText
+            android:id="@+id/editPublisher"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_margin"
+            android:ems="10"
+            android:hint="@string/publisher"
+            android:inputType="textPersonName"
+            android:autofillHints="@string/publisher"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/medium_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_weight="0"
+                android:text="@string/genre"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <Spinner
+                android:id="@+id/spGenre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/medium_margin"
+                android:layout_weight="0" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_margin"
+            android:text="@string/btn_simpan" />
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_margin"
-        android:text="@string/btn_simpan" />
-
-</LinearLayout>
+</ScrollView>
