--- a/app/src/main/res/layout/list_lagu.xml
+++ b/app/src/main/res/layout/list_lagu.xml
@@ -7,7 +7,9 @@
     app:cardBackgroundColor="#FAFAFA"
     app:cardCornerRadius="8dp"
     app:cardElevation="2dp"
-    app:cardUseCompatPadding="false">
+    app:cardUseCompatPadding="false"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
