Add simple validation

--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -80,7 +80,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/tahun"
-                android:inputType="number"/>
+                android:inputType="number"
+                android:maxLength="4"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
